# sleek

./: .ocamlformat  Askz3.ml  Makefile  ast.ml  ast.mli  ast_helper.ml  ast_helper.mli  ast_print.ml  ast_print.mli  ast_utils.ml  ast_utils.mli  astutils.ml  astutils.mli  checker.ml  checker.mli  colors.ml  colors.mli  context.ml  context.mli  dune  dune-project  examples.ml  history.ml  history.mli  inference.ml  inference.mli  instant.ml  instant.mli  lexer.mll  main.ml  parse.ml  parser.mly  parsing.ml  parsing.mli  proofctx.ml  proofctx.mli  rewriting.ml  rewriting.mli  signals.ml  signals.mli  (+10 more)
