(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --dump))

(library
 (public_name sleek)
 (name sleek)
 (modules
  lexer
  parser
  syntax
  ast
  ast_utils
  signals
  inference
  proofctx
  checker
  verifier
  colors
  utils
  sleek)
 (libraries z3))

(executable
 (name main)
 (modules main)
 (libraries sleek))

(env
 (dev
  (flags (:standard))))
