(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --dump))

(library
 (public_name sleek)
 (name sleek)
 (modules
  lexer
  parser
  parsing
  ast
  ast_helper
  ast_print
  instant
  rewriting
  context
  checker
  history
  verifier
  colors
  utils
  sleek)
 (libraries z3))

(executable
 (name tests)
 (modules tests)
 (libraries sleek))

(executable
 (name examples)
 (modules examples)
 (libraries sleek))

(env
 (dev
  (flags (:standard))))
